terminei o javascript e adicionei css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1>Rock, Paper Scissors</h1>
     </header>
         <section>
-            <button id = gameButton>Play the game</button>
+            <img src="https://lilalu-shop.com/media/image/35/9c/a5/lilalu-quietscheente-gelb-yellow-rubber-duck-HL.png" class="duck" >
+            <button id = gameButton>Play the game!</button>
             <p id="gameMessage"></p>
         </section>
     
